<resources>
    <string name="key_for_me_id_server">me_id_server</string>
    <string name="key_for_shared_preference">CONFIG</string>
    <string name="current_list">продукты</string>
    <string name="target_list">цели</string>
    <string name="me_id">-1</string>
    <string name="key_for_me_name">me_name</string>
    <string name="key_for_select_group_id">select_group</string>
    <string name="app_name">SHARED CARD</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="enter_your_group">Введите имя группы</string>
    <string name="continue_">Продолжить</string>
    <string name="choose_an_avatar_for_myself">Выберите аватарку</string>
    <string name="choose_an_avatar_for_group">Выберите аватарку для группы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_for_search_view">Введите продукт</string>
    <string name="magnifying_glass">\uf00d</string>
    <string name="arrow_left">\uf002 Введите продукт</string>
    <string name="dialog_add_product">Добавить продукт</string>
    <string name="dialog_add_target">Добавить цель</string>
    <string name="ready">готово</string>
    <string name="dialog_text_hint_porduct">Название товара</string>
    <string name="dialog_text_hint_target">Название цели</string>
    <string name="dialog_text_hint_count">Кол-во</string>
    <string name="dialog_text_hint_currency">Цена</string>
    <string name="add_product">Добавить</string>
    <string name="bought">Куплено</string>
    <string name="myPeriod">Период</string>
    <string name="join">присоединиться</string>
    <string name="create_group">создать группу</string>
</resources>