<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registration.UserGroupRegistrationActivity">
  <LinearLayout
      android:id="@+id/layout_user_group"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:background="@drawable/strok_for_photo"
      app:layout_constraintVertical_bias="0.1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="1000dp"
        app:cardElevation="1000dp"
        app:cardBackgroundColor="@color/transparent"
        android:layout_margin="6dp">
      <ImageView
          android:id="@+id/image_user_group"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

  </LinearLayout>

  <TextView
      android:id="@+id/text_choice_of_avatar"
      style="@style/TextViewLight"
      android:layout_marginTop="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/layout_user_group"
      android:text="@string/choose_an_avatar_for_myself"
      android:textAlignment="center"
      android:textSize="26sp"/>
  <EditText
      android:id="@+id/edit_text_your_name"

      style="@style/for_edit_text"
      android:inputType="text"
      android:maxLength="15"
      android:layout_marginTop="30dp"
      android:layout_marginHorizontal="40dp"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:textSize="26sp"
      android:hint="@string/enter_your_name"
      android:background="@drawable/edit_text_your_group_name"
      android:gravity="center"
      app:layout_constraintTop_toBottomOf="@id/text_choice_of_avatar"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"/>
  <Button
      android:id="@+id/button_continue"
      style="@style/TextViewDark"
      android:background="@drawable/edit_text_your_group_name"
      android:layout_margin="80dp"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:text="@string/continue_"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/edit_text_your_name"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>